update module 3 and 4

--- a/04. Introduction to Corporate Finance/Module 2 Interest Rates/2.2 APR and EAR.md
+++ b/04. Introduction to Corporate Finance/Module 2 Interest Rates/2.2 APR and EAR.md
@@ -1,66 +1,91 @@
-### 视频总结：Week 2 - 利率（Interest Rates）
+## Coursera 商业基础课程《企业财务导论》 - 模块2 - 利率
 
-#### **核心概念**
-1. **利率报价惯例**  
-   • **APR（年化利率）**：名义年利率，不考虑复利效应，仅反映简单利息（如银行广告中的“5% APR”）。  
-   • **EAR（有效年利率）**：实际年利率，计入复利效应后的真实回报率（如“5.06% EAR”）。  
-   • **复利周期（Compounding Frequency）**：利息计算的频率（如日、月、季度、半年等），复利次数越多，实际收益越高。
+### 课程2.2 APR与EAR
 
-2. **APR与EAR的数学关系**  
-   • **公式**：  
+#### 1. 核心概念
+
+1. **APR（年百分比利率，Annual Percentage Rate）**  
+   1. **定义**：银行或金融机构标明的名义年利率，**不考虑复利**（按简单利息计算）。  
+   2. **特点**：仅反映名义利息，未体现实际收益或成本。  
+   3. **公式**：  
      \[
-     \text{EAR} = \left(1 + \frac{\text{APR}}{k}\right)^k - 1
-     \]
-     其中，\( k \) = 年复利次数（如月复利 \( k=12 \)，半年复利 \( k=2 \)）。  
-   • **示例**：APR=5%、半年复利（\( k=2 \)）时，  
-     \[
-     \text{EAR} = \left(1 + \frac{0.05}{2}\right)^2 - 1 = 5.06\%.
+     APR = \text{每期利率} \times \text{年复利次数}
      \]
 
-3. **周期性利率（Periodic Rate）**  
-   • **定义**：每个复利周期内的实际利率，\( i = \frac{\text{APR}}{k} \)。  
-   • **应用**：以周期为单位计算现金流时，需使用周期性利率 \( i \)（如月利率为APR/12）。
+2. **EAR（有效年利率，Effective Annual Rate）/ APY（年百分比收益，Annual Percentage Yield）**  
+   1. **定义**：考虑复利后的实际年利率，反映真实收益或成本。  
+   2. **特点**：实际财务决策的核心依据，用于跨产品收益对比。  
+   3. **公式**：  
+     \[
+     EAR = \left(1 + \frac{APR}{k}\right)^k - 1
+     \]
+     其中，\( k \) 为年复利次数（如月复利 \( k=12 \)，半年复利 \( k=2 \)）。
+
+#### 2. 关键规则与操作
+
+1. **复利频率的影响**  
+   1. 复利频率越高，实际收益（EAR）越高于名义利率（APR）。  
+   2. **示例**：  
+       1. APR=5%，半年复利（\( k=2 \)）：  
+       \[
+       EAR = \left(1 + \frac{0.05}{2}\right)^2 - 1 = 5.0625\%
+       \]
+      2. 月复利（\( k=12 \)）：  
+       \[
+       EAR = \left(1 + \frac{0.05}{12}\right)^{12} - 1 \approx 5.116\%
+       \]
+
+2. **利率换算原则**  
+   1. **统一时间单位**：  
+      1. 使用 **周期利率（\( i = \frac{APR}{k} \))** 计算每期现金流（如月利率=APR/12）。  
+      2. 使用 **EAR** 计算年度现金流。  
+
+#### 3. 实例应用
+
+1. **投资回报计算（APR → EAR）**  
+   1. **问题**：投资\$100于APR=5%、半年复利的存单（CD），1年后价值多少？  
+   2. **步骤**：  
+      1. 计算周期利率 \( i = 5\% / 2 = 2.5\% \)。  
+      2. 半年复利计算：  
+        \[
+        FV = 100 \times (1 + 2.5\%)^2 = 105.06
+        \]
+      3. 或直接使用EAR：  
+        \[
+        FV = 100 \times (1 + 5.0625\%) = 105.06
+        \]
+   3. **结论**：实际收益由EAR决定，而非APR。
+
+2. **银行产品对比（APR vs. EAR）**  
+   - **产品A**：APR=2.37%，日复利（\( k=365 \)） → EAR≈2.4%。  
+   - **产品B**：APR=2.4%，月复利（\( k=12 \)） → EAR≈2.43%。  
+   - **决策**：选择EAR更高的产品B（实际收益更高）。
+
+#### 4. 扩展理解
+
+1. **APR的局限性**  
+   1. APR忽略复利，可能误导投资者（如信用卡公司常以低APR吸引客户，但高复利频率导致实际成本更高）。  
+   2. **法律要求**：美国《诚实信贷法》规定金融机构需披露APR，但财务决策应基于EAR。
+
+2. **实际应用场景**  
+   1. **贷款比较**：对比房贷、车贷时，需将不同复利频率的APR转换为EAR。  
+   2. **储蓄工具选择**：高复利频率的储蓄账户（如日复利）实际收益优于年复利产品。
 
 ---
 
-#### **关键结论**
-1. **APR与EAR的本质区别**  
-   • **APR是报价工具**：用于简化利率宣传，忽略复利影响，无法直接用于财务计算。  
-   • **EAR是决策依据**：反映真实收益或成本，是现金流贴现和复利的实际贴现率。
-
-2. **复利周期对实际收益的影响**  
-   • **复利频率越高，EAR与APR差异越大**。  
-     ◦ 示例：APR=2.37%、日复利（\( k=365 \)），EAR≈2.4%（实际收益略高于APR）。  
-   • **投资者需关注EAR**：比较金融产品时，高复利频率（如日复利）通常优于低频复利（如年复利）。
-
-3. **时间单位与贴现率的一致性**  
-   • **按周期计算**：使用周期性利率 \( i \)，时间单位为复利周期（如月利率对应月度现金流）。  
-   • **按年计算**：使用EAR，时间单位为年。两者结果等价，但需保持单位一致。
-
-4. **实际应用场景**  
-   • **银行存款产品**：银行通常同时标注APR和EAR（或APY），投资者需根据EAR评估真实收益。  
-   • **贷款成本分析**：APR可能低估实际利率（如信用卡月复利），需转换为EAR以准确比较。
+#### 关键结论
+1. **EAR是真实利率**：财务决策必须基于EAR，而非APR。  
+2. **复利频率至关重要**：复利次数越多，实际收益与APR差距越大。  
+3. **操作一致性原则**：  
+   - 使用周期利率时，时间单位需与复利周期一致（如月利率对应月份）。  
+   - 使用EAR时，时间单位需为年。
 
 ---
 
-#### **示例解析**
-• **问题**：投资$100于APR=5%、半年复利的存款，1年后终值多少？  
-  • **按周期计算**：  
-    ◦ 周期性利率 \( i = 5\% / 2 = 2.5\% \)。  
-    ◦ 终值 \( FV = 100 \times (1 + 0.025)^2 = 105.06 \) 美元。  
-  • **按年计算**：  
-    ◦ EAR = \( (1 + 0.025)^2 - 1 = 5.06\% \)。  
-    ◦ 终值 \( FV = 100 \times 1.0506 = 105.06 \) 美元。  
-  • **结论**：两种方法结果一致，验证公式正确性。
+### 附录：字幕
 
----
-
-#### **下一步学习方向**
-后续课程将探讨**利率期限结构（Yield Curve）**，分析不同期限利率的关系及其对投资决策的影响。掌握APR与EAR的转换是理解复杂利率模型（如浮动利率债券、衍生品定价）的基础。
-
-## Prompt
-
-下面提供 Coursera Business Foundations 系列课程的第四课 Introduction to Corporate Finance 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
+```
+下面提供 Coursera Business Foundations 系列课程的第四课 Introduction to Corporate Finance 的视频 subtitle 及 slide，请用中文对该视频小节进行总结并提炼关键结论
 
 ## 模块标题: Week 2: Interest Rates
 
@@ -99,3 +124,4 @@ So let's go back to our original example. [COUGH] We had an APR of 2.37%. We hav
 So let's summarize. We learned that there are two discount rates depending on what unit of time you want to work with. If we want to think in term of periods, we want to use a periodic discount rate, that's i. If we want to work in year, we want to use the EAR, the effective annual rate, which relies on cash flows measured in years. Both of these are discount rates, they'll both get us to the same goal or the same end result, but we have to be consistent in terms of how we measure time with which discount rate we use. APR, that's a quoting convention, that's a means to an end. We use APR in conjunction with the compounding frequency to get our discount rate, whether it's the EAR or the periodic discount rate, i.
 
 And we can move between the APR and I and the EAR by a couple of very simple mathematical relations that we discussed. Now, next are a bunch of great problems that I want you to dive into. And then after you are done with those, move on to the second part of interest rates in which we are going to investigate the term structure of interest rates and talk about the yield curve, but you know what these things mean. Thank you so much.
+```
