--- a/04. Introduction to Corporate Finance/Module 2 Interest Rates/2.3 Term Structure.md
+++ b/04. Introduction to Corporate Finance/Module 2 Interest Rates/2.3 Term Structure.md
@@ -1,58 +1,71 @@
-### 视频总结：Week 2 - 利率（Interest Rates）
+## Coursera 商业基础课程《企业财务导论》 - 模块2 - 利率
 
-#### **核心概念**
-1. **利率期限结构（Term Structure of Interest Rates）**  
-   • **定义**：不同期限投资的利率分布关系，反映长期与短期利率的差异。  
-   • **即期利率（Spot Rate）**：当前时点对不同期限无风险贷款（如国债）的利率，即“今日借贷今日定价”的利率。  
-   • **收益率曲线（Yield Curve）**：图形化展示利率期限结构，横轴为投资期限（如1个月至30年），纵轴为对应利率。
+### 课程2.3 利率的期限结构与收益率曲线
 
-2. **收益率曲线的形态与市场预期**  
-   • **向上倾斜（2012年）**：长期利率高于短期利率，暗示市场预期未来利率上升或要求长期风险补偿。  
-   • **向下倾斜（1981年）**：短期利率高于长期利率，可能反映市场预期未来经济衰退或利率下降。  
-   • **平坦或驼峰型**：不同期限利率相近或中期利率高于长短期，反映复杂市场预期。
+#### 1. 核心概念
 
-3. **风险与收益率曲线的关系**  
-   • **信用风险**：高信用评级（如AAA级）企业债券的收益率低于低评级（如BBB级），因违约风险更低。  
-   • **税收与流动性**：市政债收益率可能低于国债（免税优势），但流动性差异可能抵消部分收益优势。
+1. **利率的期限结构（Term Structure）**  
+   1. 定义：不同期限（term）的投资或贷款对应的利率关系，表现为利率随期限变化的规律。
+   2. 关键结论：  
+      1. 长期利率通常不等于短期利率，且可能呈现上升、下降或平坦的形态。  
+      2. 例如，30年期国债利率可能显著高于1月期国债利率（如2014年数据：30年期约3%，1月期接近0%）。
 
-4. **即期利率与贴现率的关系**  
-   • **传统模型假设**：此前默认贴现率恒定，忽略不同期限利率差异（即假设收益率曲线平坦）。  
-   • **现实修正**：实际需对不同期限现金流使用对应即期利率贴现，以准确估值（如长期现金流用长期即期利率）。
+2. **收益率曲线（Yield Curve）**  
+   1. 定义：以图形展示期限结构，横轴为到期时间，纵轴为收益率（即利率）。  
+   2. 关键结论：  
+      1. 收益率曲线的形态反映市场对未来利率的预期：  
+         1.  **向上倾斜**（如2012年）：预期未来利率上升。  
+         2. **向下倾斜**（如1981年）：预期未来利率下降。  
+      2. 不同历史时期的曲线形态差异显著（如1981年短期利率高达15%，2012年短期利率趋近零）。
+
+#### 2. 影响利率差异的因素
+
+1. **风险因素**  
+   1. 信用评级越低（风险越高），债券的收益率越高（补偿风险溢价）。  
+   2. 例：AAA级企业债利率 < BBB级企业债利率；市政债因税收优惠可能低于国债利率。
+
+2. **税收与流动性**  
+   1. 市政债（AAA级）的收益率可能低于国债，主要因利息收入免税。  
+   2. 流动性差异（如国债流动性高）也会影响利率。
+
+3. **即期利率（Spot Rates）**  
+   1. 定义：当前签订合约、立即生效的贷款对应不同期限的利率。  
+   2. 应用：用于计算债券现值，即通过不同期限的即期利率折现未来现金流。
+
+#### 3. 对现值公式的修正
+
+- 传统现值公式假设单一折现率（R），但现实中需根据期限结构调整：  
+  \[
+  PV = \frac{CF_1}{(1+y_1)} + \frac{CF_2}{(1+y_2)^2} + \dots + \frac{CF_T}{(1+y_T)^T}
+  \]
+   - \(y_t\) 表示第\(t\)期的即期利率。  
+- **关键结论**：当收益率曲线非平坦时，使用单一折现率会导致估值偏差，需分期限匹配对应利率。
+
+#### 4. 实际应用与启示
+
+1. **企业融资决策**  
+   1. 长期项目融资成本需参考长期利率，而非短期利率。  
+   2. 收益率曲线形态影响企业选择债务期限（如预期利率上升时倾向锁定长期利率）。
+
+2. **政府债券分析**  
+   1. 国债收益率曲线反映无风险利率的期限结构，是其他资产定价的基准。
+
+3. **宏观经济信号**  
+   1. 倒挂的收益率曲线（短期利率 > 长期利率）可能预示经济衰退。
 
 ---
 
-#### **关键结论**
-1. **利率期限结构的动态性**  
-   • 利率随期限、经济周期、通胀预期和货币政策大幅波动（如1981年美国短期利率达15%，2012年接近0%）。  
-   • 收益率曲线形状（斜率）是市场对未来利率和经济走势的“晴雨表”。
-
-2. **企业融资决策的启示**  
-   • **长期融资成本**：向上倾斜曲线下，企业更倾向长期融资以锁定低利率；向下倾斜时可能偏好短期融资。  
-   • **风险评估**：高信用风险企业需支付更高风险溢价（收益率），尤其在长期融资中差异显著。
-
-3. **估值模型的局限性**  
-   • **单一贴现率假设的缺陷**：忽略期限结构将导致估值偏差（如长期项目低估贴现率，高估现值）。  
-   • **精准估值方法**：需对每期现金流使用对应期限的即期利率贴现（多阶段贴现模型）。
-
-4. **国债收益率的基准作用**  
-   • 国债收益率曲线为无风险利率基准，其他资产（如公司债、贷款）定价需在此基础上叠加风险溢价。
+#### 总结
+- **利率期限结构**揭示了利率随期限变化的规律，通过**收益率曲线**可视化。  
+- 利率差异由风险、税收、流动性等多因素驱动，需分场景匹配即期利率计算现值。  
+- 传统现值公式的简化假设（单一折现率）在非平坦曲线下不精确，需按期限调整折现率。  
 
 ---
 
-#### **实际应用示例**
-• **国债收益率曲线（2014年7月）**：  
-  • 1个月短期利率≈0%，30年长期利率≈3%，反映市场低通胀预期与长期经济增速放缓。  
-• **企业债收益率比较（AAA vs BBB）**：  
-  • AAA级5年期债券利率≈2.5%，BBB级同期限利率≈4.5%，信用风险溢价约2%。
+### 附录：字幕
 
----
-
-#### **下一步学习方向**
-后续课程将深入**贴现现金流分析（DCF）**，结合期限结构理论，构建多阶段现金流估值模型。掌握利率期限结构是理解债券定价、资本成本计算及复杂金融工具（如利率衍生品）的基础。
-
-## Prompt
-
-下面提供 Coursera Business Foundations 系列课程的第四课 Introduction to Corporate Finance 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
+```
+下面提供 Coursera Business Foundations 系列课程的第四课 Introduction to Corporate Finance 的视频 subtitle 及 slide，请用中文对该视频小节进行总结并提炼关键结论
 
 ## 模块标题: Week 2: Interest Rates
 
@@ -143,3 +156,4 @@ We also learned that interest rates will vary by the risk of the investment. We 
 So. What's up next? We turn to a new topic: discounted cash flow.
 
 I look forward to seeing you then. Thanks a lot.
+```
