--- a/04. Introduction to Corporate Finance/Module 2 Interest Rates/2.4 Discounted Cash Flow: Decision Making.md
+++ b/04. Introduction to Corporate Finance/Module 2 Interest Rates/2.4 Discounted Cash Flow: Decision Making.md
@@ -1,58 +1,67 @@
-### 视频总结：Week 2 - 利率（Interest Rates）
+## Coursera 商业基础课程《企业财务导论》 - 模块2 - 利率
 
-#### **核心概念**
-1. **贴现现金流（DCF）分析的核心目标**  
-   • 通过比较项目收益与成本的现值，评估价值创造能力，指导财务决策。  
-   • **净现值（NPV）决策规则**：接受NPV>0的项目（收益现值>成本现值），拒绝NPV<0的项目。
+### 课程2.4 贴现现金流决策
 
-2. **NPV的公式与本质**  
-   • 公式：  
+#### 1. 核心概念
+
+1. **净现值（NPV，Net Present Value）决策规则**  
+   1. **定义**：项目的NPV等于其未来自由现金流（FCF）按适当贴现率折现后的现值总和。  
+   2. **公式**：  
      \[
-     \text{NPV} = \sum_{t=0}^T \frac{\text{FCF}_t}{(1+R)^t}
+     NPV = \sum_{t=0}^T \frac{FCF_t}{(1 + R)^t}
      \]
-     其中，\( \text{FCF}_t \) = 第\( t \)期的自由现金流，\( R \) = 贴现率（反映项目风险）。  
-   • **自由现金流（FCF）**：未来现金流入与流出的净额（后续课程将详细定义）。
+     其中，\( FCF_t \) 为第 \( t \) 期的自由现金流，\( R \) 为反映项目风险的贴现率。  
+   3. **决策标准**：  
+      1. \( NPV > 0 \): 接受项目（创造价值）。  
+      2. \( NPV < 0 \): 拒绝项目（损害价值）。  
 
-3. **其他决策准则的实践应用**  
-   • **内部收益率（IRR）**：使NPV=0的贴现率，私人股权（PE）基金主要使用。  
-   • **回收期法（Payback Period）**：项目回本所需时间，忽视时间价值和远期现金流，但操作简单。  
-   • **折现回收期法（Discounted Payback）**：改进版，考虑现金流贴现，仍忽略回收期后收益。
+2. **NPV与其他决策规则的对比**  
+   1. **内部收益率（IRR）**：使NPV=0的贴现率。私募股权（PE）常用，但存在多解问题且忽略规模差异。  
+   2. **回收期法（Payback Rule）**：关注回本速度，忽略时间价值和后续现金流。  
+   3. **贴现回收期法（Discounted Payback）**：改进版，考虑时间价值，仍忽略后续现金流。  
 
-4. **决策准则的优劣势对比**  
-   • **NPV的优势**：全面纳入所有现金流的时间价值与风险，直接衡量价值创造。  
-   • **IRR的局限**：多重解问题（非传统现金流）、再投资假设不现实、与NPV结论可能冲突。  
-   • **回收期法的缺陷**：忽略长期收益，可能导致短视决策。
+#### 2. 关键规则与操作
 
-5. **企业实践的调查数据**  
-   • **CFO决策偏好**：NPV与IRR最常用，回收期法次之（因其简单直观）。  
-   • **投行与私募基金**：DCF为主，辅以市场法（如市盈率倍数）；PE基金高度依赖IRR（因LP关注收益率）。  
+1. **NPV的核心优势**  
+   1. **价值创造导向**：直接衡量项目对股东财富的贡献。  
+   2. **风险与时间调整**：通过贴现率 \( R \) 反映现金流的风险与时间分布。  
+   3. **可加性**：多个独立项目的NPV可叠加，支持组合决策。
+
+2. **自由现金流（FCF）的定义**  
+   - 企业经营活动产生的、可自由分配给投资者的现金流，公式为：  
+     \[
+     FCF = \text{税后营业利润} + \text{折旧摊销} - \text{资本性支出} - \text{净营运资本变动}
+     \]
+
+#### 3. 实际应用场景
+
+1. **企业财务（CFO决策）**  
+   1. **调查显示**：约75%的CFO使用NPV和IRR作为主要资本预算工具，辅以回收期法（50%使用率）。  
+   2. **NPV优先性**：NPV为理论最优，IRR因直观性被广泛采用。
+
+2. **投资银行（估值与并购）**  
+   1. **DCF主导**：约90%的投行使用贴现现金流分析，结合市场倍数法（如市盈率、EV/EBITDA）交叉验证。
+
+3. **私募股权（PE投资）**  
+   1. **IRR偏好**：80%的PE机构以IRR为核心指标，因其强调投资回报率且匹配高风险项目评估需求，但需警惕再投资假设不现实的问题。
 
 ---
 
-#### **关键结论**
-1. **NPV是最优决策规则**  
-   • **唯一性**：NPV直接量化项目价值增量，避免其他方法的假设偏差。  
-   • **普适性**：适用于任意现金流模式，与股东财富最大化目标一致。
-
-2. **多准则综合决策的必要性**  
-   • **互补性**：IRR可辅助理解收益率，回收期法评估流动性风险。  
-   • **实践权衡**：企业常结合NPV、IRR和回收期法，平衡长期价值与短期风险。
-
-3. **贴现率的选择关键性**  
-   • **风险匹配**：贴现率需反映项目风险（如资本成本或风险调整后利率）。  
-   • **期限结构**：长期项目应使用对应期限的即期利率（避免单一利率假设误差）。
-
-4. **自由现金流的计算重要性**  
-   • **后续重点**：准确计算FCF是DCF分析的基础，需区分会计利润与真实现金流。
+#### 关键结论
+1. **NPV为黄金标准**：唯一始终与价值创造一致的决策规则，但需准确预测现金流并选择合理贴现率。  
+2. **多规则协同应用**：  
+    1. **IRR**：辅助评估回报率，需结合NPV避免误导。  
+    2. **回收期法**：用于流动性敏感项目（如初创企业），但不可替代DCF。  
+3. **行业差异**：  
+    1. **PE依赖IRR**：因杠杆收购（LBO）的期限结构与退出机制匹配IRR特性。  
+    2. **投行结合倍数法**：弥补DCF对假设敏感性的缺陷，增强估值可信度。
 
 ---
 
-#### **下一步学习方向**
-下一讲将深入**自由现金流的计算方法**，明确其与会计指标（如净利润）的区别，并演示如何从财务报表中推导FCF。掌握FCF是执行DCF分析的核心步骤，为估值与投资决策提供数据基础。
+### 附录：字幕
 
-## Prompt
-
-下面提供 Coursera Business Foundations 系列课程的第四课 Introduction to Corporate Finance 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
+```
+下面提供 Coursera Business Foundations 系列课程的第四课 Introduction to Corporate Finance 的视频 subtitle 及 slide，请用中文对该视频小节进行总结并提炼关键结论
 
 ## 模块标题: Week 2: Interest Rates
 
@@ -103,3 +112,4 @@ So let's summarize this. So we're going to move through this topic of DCF, disco
 So what's next? We're going to dive into how to compute free cash flows, the first stage in understanding how to execute a DCF.
 
 So, I look forward to seeing you in the next lecture. Thanks so much.
+```
