--- a/04. Introduction to Corporate Finance/Module 3 Discounted Cash Flow Analysis/3.1 Free Cash Flow.md
+++ b/04. Introduction to Corporate Finance/Module 3 Discounted Cash Flow Analysis/3.1 Free Cash Flow.md
@@ -1,78 +1,76 @@
-### 视频总结：Week 3 - 利率（Interest Rates）
+## Coursera 商业基础课程《企业财务导论》 - 模块3 - 贴现现金流分析
 
-#### **核心概念**
-1. **自由现金流（Free Cash Flow, FCF）的定义**  
-   • **无杠杆自由现金流（Unlevered FCF）**：项目或企业在满足所有运营和投资需求后，可供债权人和股东分配的剩余现金流。  
-   • **股权自由现金流（FCF to Equity）**：在支付债务利息和偿还本金后，可供股东分配的现金流，反映杠杆（负债）对现金流的影响。
+### 课程3.1 自由现金流
 
-2. **自由现金流的计算公式**  
-   • **无杠杆FCF**：  
-     \[
-     \text{Unlevered FCF} = (\text{收入} - \text{成本} - \text{折旧}) \times (1 - t_c) + \text{折旧} - \text{资本支出} - \Delta \text{净营运资本}
-     \]
-     ◦ \( t_c \) = 边际税率，\( \Delta \text{净营运资本} \) = 当前资产（现金、应收、存货） - 当前负债（应付）。  
-   • **股权FCF**：  
-     \[
-     \text{FCF to Equity} = \text{Unlevered FCF} - \text{税后利息支出} + \text{净借款}
-     \]
+#### 1. 核心概念
 
-3. **折旧的作用**  
-   • 折旧是非现金支出，但通过减少应税收入提供**税盾**（Tax Shield），降低实际税负。需在计算中加回，以反映真实现金流。
+1. **自由现金流的定义与分类**  
+   1. **无杠杆自由现金流（Unlevered FCF）**：企业经营活动产生的、可分配给所有资本提供者（债权人和股东）的现金流，与资本结构无关。  
+   2. **杠杆自由现金流（Levered FCF / FCFE）**：扣除债务相关现金流（利息、净借款）后，可分配给股东的剩余现金流。
 
-4. **净营运资本（NWC）的变化**  
-   • **NWC = 当前资产 - 当前负债**，需计算其周期变化（\( \Delta \text{NWC} \)）。  
-   • **实际影响**：营运资本增加（如存货积压）消耗现金流，减少则释放现金流。
+2. **自由现金流的计算逻辑**  
+   1. **起点**：营业收入（Revenue） → 扣除运营成本（Costs）、折旧摊销（Depreciation）及税收（Taxes）。  
+   2. **调整项**：  
+      1. **加回非现金费用**（如折旧摊销）。  
+      2. **扣除资本性支出（CapEx）**：维持或扩大生产能力的投资。  
+      3. **扣除净营运资本变动（ΔNWC）**：反映营运资金需求变化。  
+
+#### 2. 关键公式
+
+1. **无杠杆自由现金流（Unlevered FCF）**  
+   \[
+   \text{Unlevered FCF} = (\text{Revenue} - \text{Costs} - \text{Depreciation}) \times (1 - t_c) + \text{Depreciation} - \text{CapEx} - \Delta \text{NWC}
+   \]
+   1. \( t_c \): 边际税率  
+   2. \( \Delta \text{NWC} = \text{Current Assets} - \text{Current Liabilities} \)（重点关注应收账款、存货、应付账款）。
+
+2. **杠杆自由现金流（FCFE）**  
+   \[
+   \text{FCFE} = \text{Unlevered FCF} - \text{税后利息支出} + \text{净借款（Net Borrowing）}
+   \]
+   1. **税后利息**：利息支出 × (1 - \( t_c \))，因利息具有税盾效应。  
+   2. **净借款**：新增债务 - 债务偿还。
+
+#### 3. 关键规则与操作
+
+1. **非现金项目的处理**  
+   1. **折旧摊销**：虽减少会计利润，但无实际现金流出，需加回。  
+   2. **税盾效应**：折旧通过减少应税利润间接增加现金流（公式中的 \( t_c \times \text{Depreciation} \)）。
+
+2. **战略决策 vs. 财务决策的影响**  
+   1. **战略决策**（产品定价、成本控制、投资）：直接影响收入、成本、CapEx和NWC，改变无杠杆FCF。  
+   2. **财务决策**（债务结构、利息支付）：仅影响杠杆FCF，不改变无杠杆FCF（假设MM定理成立）。
+
+#### 4。 实际应用场景
+
+1. **资本预算（项目评估）**  
+   1. 使用无杠杆FCF计算项目NPV，独立于融资方式，反映项目自身价值。  
+   2. **示例**：评估新工厂投资时，需预测其未来收入、运营成本、设备折旧、资本支出及营运资金需求。
+
+2. **企业估值（DCF模型）**  
+   1. **无杠杆FCF**：用于企业整体估值（Enterprise Value）。  
+   2. **杠杆FCF**：用于股权估值（Equity Value），需结合债务结构分析。
+
+3. **财务健康诊断**  
+   1. **FCF > 0**：企业可持续分红、偿债或再投资。  
+   2. **FCF < 0**：需依赖外部融资，可能预示流动性风险。
 
 ---
 
 #### **关键结论**
-1. **自由现金流的核心逻辑**  
-   • **战略决策影响无杠杆FCF**：收入、成本、资本支出等由企业运营战略决定（如市场扩张、成本控制）。  
-   • **财务决策影响股权FCF**：债务结构（利息、净借款）仅影响股权现金流，不改变无杠杆FCF。
-
-2. **税务处理的关键性**  
-   • **税盾计算**：折旧和利息支出通过降低应税收入减少税负，需在FCF中精确反映。  
-   • **边际税率**：使用企业适用的实际税率（非会计账面税率）。
-
-3. **资本支出与投资的区分**  
-   • **资本支出（CapEx）**：长期资产投资（如设备、厂房），需从现金流中扣除。  
-   • **营运资本投资**：短期运营需求（如存货、应收账款），通过\( \Delta \text{NWC} \)调整。
-
-4. **自由现金流的应用场景**  
-   • **资本预算**：评估项目可行性（NPV计算）。  
-   • **企业估值**：DCF模型的核心输入。  
-   • **股东回报**：股权FCF决定股息支付和股票回购能力。
-
-5. **常见误区与验证方法**  
-   • **财务政策不影响无杠杆FCF**：验证计算时，需确保融资决策（如债务增减）仅影响股权FCF，不影响无杠杆FCF。  
-   • **非现金项目的处理**：折旧、摊销需加回，避免重复扣除。
+1. **自由现金流的本质**：反映企业/项目创造真实现金的能力，是DCF分析的基石。  
+2. **与会计利润的区别**：  
+   1. 会计利润含非现金项目（折旧）及应计项（如赊销收入），自由现金流关注实际现金变动。  
+   2. **示例**：高利润企业可能因大量资本支出或NWC增加导致FCF为负。  
+3. **决策分离原则**：  
+   1. 项目价值评估应基于无杠杆FCF（避免融资决策干扰）。  
+   2. 股东回报分析需结合杠杆FCF（反映债务影响）。
 
 ---
 
-#### **实际应用示例**
-• **无杠杆FCF计算**：  
-  • 收入：$500万  
-  • 成本：$300万  
-  • 折旧：$50万  
-  • 税率：30%  
-  • 资本支出：$80万  
-  • Δ净营运资本：+$20万  
-  \[
-  \text{Unlevered FCF} = (500 - 300 - 50) \times (1 - 0.3) + 50 - 80 - 20 = 105 + 50 - 80 - 20 = \$55万
-  \]
+### 附录：字幕
 
-• **股权FCF计算**（假设税后利息$10万，净借款$30万）：  
-  \[
-  \text{FCF to Equity} = 55 - 10 + 30 = \$75万
-  \]
-
----
-
-#### **下一步学习方向**
-后续课程将深入**自由现金流的预测方法**，结合具体案例（如资本预算案例）演示如何从财务报表中推导关键驱动因素（收入增长率、成本结构、资本支出计划等），并讨论敏感性分析在风险评估中的应用。掌握自由现金流的动态预测是构建稳健财务模型的基础。
-
-## Prompt
-
+```
 下面提供 Coursera Business Foundations 系列课程的第四课 Introduction to Corporate Finance 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
 ## 模块标题: Week 3: Interest Rates
@@ -138,3 +136,4 @@ You know, NPV is a decision rule that's going to quantify the value implications
 And what we saw is that there's a relatively simple formula for computing free cash flows and don't be misled by its simplicity. It applies broadly. We can always use this definition. The trick in practice is actually estimating the components and figuring out what hits unlevered free cash flow versus levered free cash flow. What's relevant for cash flow, what's not relevant for cash flow.
 
 The remainder of this topic is going to be geared towards answering those questions in the context of an actual example. So, coming up next we're going to start in on Forecast Drivers, and trying to understand how we're going to forecast each of those components of free cash flow out into the future. Thanks so much.
+```
